--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,8 +24,8 @@ body {
     position:relative;
     font-family: 'Montserrat', sans-serif;
     color: $main-text;
-    overflow: hidden;
-    background:linear-gradient(to right, $violet, $black);
+    overflow-x: hidden;
+    background:linear-gradient(to left, $violet, $black);
     // background-image: linear-gradient(to right, rgb(9, 0, 15) 0 5%, rgba(255, 255, 255, 0) 20% 100%), 
     //                     url("/images/auroraoriginal.jpg");
                         
