--- a/assets/scss/components/home_page.scss
+++ b/assets/scss/components/home_page.scss
@@ -236,7 +236,7 @@
 
 @media screen and (max-width: 768px){
     .main{
-        margin:4rem 1rem;
+        margin:0 0;
     }
 
     .angular{
@@ -255,7 +255,7 @@
 
 @media screen and (max-width: 550px){
     .main{
-        margin:2rem 1rem;
+        margin:0 1rem;
     }
     .hello-friend{
         font-size: 1.2rem;
