Navbar Fixed, bubble pulse

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,6 +26,13 @@
                 </div>
             </div>
         </div>
+
+        <!-- PULSE DOT -->
+        <div class="fixed-stick">
+            <div class="stick"></div>
+            <div class="bubble"></div>
+            <div class="bubble-pulse"></div>
+          </div>
         
 
         <!-- MAIN PRESENTATION -->
@@ -48,7 +55,11 @@
 
         <div class="main">
             <div class="content">
-                <p>Hello World()</p>
+                <div id="containerfrasi">
+                    <div class="frase"><p id="primo">adfh</p></div>
+                    <div class="frase"><p id="secondo">aedfg</p></div>
+                    <div class="frase"><p id="terzo">asrg</p></div>    
+                </div>
             </div>
         </div>
 
