--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -5,8 +5,11 @@
     transition: width 600ms ease;
     font-family: 'Roboto Mono', monospace;
     top: 0;
-    width: 15rem;
+    overflow: hidden;
+    z-index: -10;
+    width: 20vw;
     height: 100vh;
+    
 }
 
 .navbar-na{
@@ -23,10 +26,6 @@
     text-align: center;
     width: 25%;
 }
-  
-// .nav-item:last-child {
-//     margin-top: auto;
-// }
 
 .nav-item:first-child {
     margin-bottom: 14rem;
@@ -53,7 +52,7 @@
 
 .burger{
     display: none;
-    position: absolute;
+    position: fixed;
     cursor: pointer;
     top: 1rem;
     right: 1rem;
@@ -75,8 +74,8 @@
     }
     
     .navbar{
-        position:absolute;
-        right:0px;
+        position:fixed;
+        right:0;
         height: 100%;
         width: 70%;
         display:none;
@@ -109,6 +108,7 @@
 .nav-active{
     transform: translateX(0%);
     display: block;
+    position: fixed;
 }
 
 @keyframes navLinkFade{
