--- a/assets/scss/components/home_page.scss
+++ b/assets/scss/components/home_page.scss
@@ -1,31 +1,33 @@
-
+// MAIN COMPONENTS
 
 .main{
     //position: absolute;
+    width: 80vw;
     height: 100vh;
-    margin-left: 20rem;
-    padding: 4rem 0rem;
+    margin-left: 20vw;
+    padding: 6vh 0rem;
     display: none;
     opacity: 0;
 }
 
 .content{
+    position: relative;
     width: 100%;
-    height: 100%;
+    height: 94vh;
     display: flex;
+    margin-bottom: 6vh;
     flex-direction: column;
     justify-content: center;
     
 }
 
-// Decorazioni
+//  DECORATION
 .angular{
     font-family: 'Alex Brush', cursive;
     font-size: 1.2rem;
     color: $grey;
     //text-shadow: 1px 1px 3px $black;
 }
-
 
 .html{
     position: absolute;
@@ -45,8 +47,8 @@
 }
 
 
+// CONTENT
 
-// Presentazioni
 .hello-friend{
     margin-left: 3rem;
     font-size: 3rem;
@@ -60,7 +62,46 @@
     margin-left: 3rem;
 }
 
-// Glitch
+// PULSE BUBBLE
+.fixed-stick{
+    position: fixed;
+    top: 50%;
+    left: 200px;
+    opacity: 0;
+ }
+ .stick{
+   position: absolute;
+   z-index: -1;
+   width:2px;
+   height: 50vh;
+   transform: translate(4px,3px);
+   background: rgb(255,231,0);
+   background: linear-gradient(135deg, #6529E1 30%, rgba(236,255,0,0) 100%);
+ }
+ .bubble{
+   z-index:2;
+   width: 10px;
+   height: 10px;
+   border-radius: 50%;
+   background-color: #6529E1;
+ }
+ 
+ .bubble-pulse {
+   position:absolute;
+   top: 50%;
+   left: 0;
+   z-index:1;
+   height: 30px;
+   width: 30px;
+   margin-top: -15px;
+   margin-left: -10px;
+   background: #6529E1;
+   border-radius: 50%;
+   opacity: 0;
+   transform: scale(0);
+ }
+
+// GLITCH
 .glitch {
     width: 100%;
     color: white;
@@ -231,16 +272,51 @@
     }
 }
 
+// SECONDA SCHEDA
+#secondo,
+#primo,
+#terzo{
+  color: white;
+  height: 3rem;
+  //visibility:hidden;
+}
+
+#primo,
+#terzo{
+  color: grey;
+  font-size: 1rem;
+}
+
+// .prima .cursor,
+// .terza .cursor{
+//   font-size: 2rem;
+// }
+
+#containerfrasi{
+  display:flex;
+  flex-direction: column;
+/*   flex-direction: column; */
+}
+
+.frase{
+  display: flex;
+  align-items:center;
+}
+
 
 // MEDIAQUERYES
 
 @media screen and (max-width: 768px){
     .main{
-        margin:0 0;
+        margin:0 2rem;
     }
 
     .angular{
         font-size: 1rem;
+    }
+
+    .fixed-stick{
+        left: 1rem;
     }
 
     .hello-friend{
