--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,12 +23,13 @@ body {
     min-height: 100vh;
     position:relative;
     font-family: 'Montserrat', sans-serif;
+    letter-spacing: -2px;
     color: $main-text;
     overflow-x: hidden;
     background:linear-gradient(to left, $violet, $black);                 
     background-repeat: no-repeat;
     background-size: cover;
-    backdrop-filter: blur(50px);
+    // backdrop-filter: blur(50px);
 }
 
 body::-webkit-scrollbar{
