--- a/layouts/index.html
+++ b/layouts/index.html
@@ -55,11 +55,9 @@
 
         <div class="main">
             <div class="content">
-                <div id="containerfrasi">
-                    <div class="frase"><p id="primo">adfh</p></div>
-                    <div class="frase"><p id="secondo">aedfg</p></div>
-                    <div class="frase"><p id="terzo">asrg</p></div>    
-                </div>
+                <p id="primo">adfh</p>
+                <h1 id="secondo">aedfg</h1>
+                <p id="terzo">asrg</p>
             </div>
         </div>
 
