--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,9 +41,9 @@
                 <div class="html angular">&lt html &gt</div>
                 <div class="body angular">&lt body &gt</div>
                 <div class="h1 angular">&lt h1 &gt</div>
-                <div class="hello-friend">
-                    <h1>Hi,<br></h1>
-                    <h1 class="glitch">I'm Frabatx<br></h1>
+                <div class="main-text">
+                    <h1>Hi</h1> 
+                    <h1 class="glitch">I'm Frabatx</h1>
                     <h1>I'm a developer</h1>
                 </div>
                 <div class="h1 angular">&lt /h1 &gt</div>
@@ -55,9 +55,9 @@
 
         <div class="main">
             <div class="content">
-                <p id="primo">adfh</p>
-                <h1 id="secondo">aedfg</h1>
-                <p id="terzo">asrg</p>
+                <p id="intro-cv"></p>
+                <h1 id="cv"></h1>
+                <p id="desc-cv"></p>
             </div>
         </div>
 
