--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,27 +37,43 @@
 
         <!-- MAIN PRESENTATION -->
         <div class="main">
+            <div class="html angular">&lthtml&gt</div>
+            <div class="body angular">&ltbody&gt</div>
             <div class="content">
-                <div class="html angular">&lt html &gt</div>
-                <div class="body angular">&lt body &gt</div>
-                <div class="h1 angular">&lt h1 &gt</div>
-                <div class="main-text">
-                    <h1>Hi</h1> 
-                    <h1 class="glitch">I'm Frabatx</h1>
-                    <h1>I'm a developer</h1>
+                <div class="main-content">
+                    <div class="h1 angular">&lth1&gt</div>
+                    <div class="main-text">
+                        <h1>Hi</h1> 
+                        <h1 class="glitch">I'm Frabatx</h1>
+                        <h1>I'm a developer</h1>
+                    </div>
+                    <div class="h1 angular">&lt/h1&gt</div>
                 </div>
-                <div class="h1 angular">&lt /h1 &gt</div>
-                <div class="p angular">&lt p &gt</div>
-                <p class="description">Data Science Student / Full Stack .Net Developer</p>
-                <div class="p angular">&lt /p &gt</div>
+                <div class="description">
+                    <div class="p angular">&ltp&gt</div>
+                    <p class="description-text">Data Science Student / Full Stack .Net Developer</p>
+                    <div class="p angular">&lt/p&gt</div>
+                </div>
             </div>
         </div>
 
         <div class="main">
             <div class="content">
-                <p id="intro-cv"></p>
-                <h1 id="cv"></h1>
-                <p id="desc-cv"></p>
+                <div class="main-content">
+                    <p class="description-text" id="intro-cv"></p>
+                    <h1 class="main-text" id="cv"></h1>
+                    <p class="description-text" id="desc-cv"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="main">
+            <div class="content">
+                <div class="main-content">
+                    <h1 class="main-text" id="army"></h1>
+                    <p class="description-text" id="years-army"></p>
+                    <p id="desc-army"></p>
+                </div>
             </div>
         </div>
 
