--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,13 +1,13 @@
 
 // Colors
-$black: rgb(10, 10, 10);
+$black: #0e0e0e;
 $violet: #682AE9; 
 $purple: #853586;
 $green: #0B8D00;
 $yellow: #FFB800;
 $red: #FF0000;
 $grey: rgb(128, 128, 128);
-$darkgrey: rgb(0, 0, 0);
+$darkgrey: #6f607d;
 $main-text: rgb(245, 245, 245); 
 
 //Color palette MIDNIGHT GREEN
@@ -23,7 +23,6 @@ body {
     min-height: 100vh;
     position:relative;
     font-family: 'Montserrat', sans-serif;
-    letter-spacing: -2px;
     color: $main-text;
     overflow-x: hidden;
     background:linear-gradient(to left, $violet, $black);                 
@@ -45,18 +44,22 @@ body::-webkit-scrollbar-thumb{
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 5rem;
 }
 
-
+@media screen and (max-width: 1200px){
+    h1{
+        font-size: 4rem;
+    }
+}
 
 @media screen and (max-width: 768px){
     h1{
-        font-size: 1.6rem;
+        font-size: 2.5rem;
     }
 }
 @media screen and (max-width: 550px){
     h1{
-        font-size: 1.2rem;
+        font-size: 2.2rem;
     }
 }
