--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -46,6 +46,9 @@ body::-webkit-scrollbar-thumb{
 h1{
     font-size: 5rem;
 }
+p{
+    font-size: 1.3rem;
+}
 
 @media screen and (max-width: 1200px){
     h1{
@@ -60,6 +63,9 @@ h1{
 }
 @media screen and (max-width: 550px){
     h1{
-        font-size: 2.2rem;
+        font-size: 1.8rem;
+    }
+    p{
+        font-size: .9rem;
     }
 }
