--- a/layouts/index.html
+++ b/layouts/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="main">
+        <div class="main-minus">
             <div class="content">
                 <div class="main-content">
                     <p class="description-text" id="intro-cv"></p>
@@ -67,13 +67,19 @@
             </div>
         </div>
 
-        <div class="main">
+        <div class="main-minus">
             <div class="content">
                 <div class="main-content">
                     <h1 class="main-text" id="army"></h1>
                     <p class="description-text" id="years-army"></p>
                     <p id="desc-army"></p>
                 </div>
+            </div>
+        </div>
+
+        <div class="main-minus">
+            <div class="content">
+                
             </div>
         </div>
 
