--- a/layouts/index.html
+++ b/layouts/index.html
@@ -72,7 +72,17 @@
                 <div class="main-content">
                     <h1 class="main-text" id="army"></h1>
                     <p class="description-text" id="years-army"></p>
-                    <p id="desc-army"></p>
+                    <p class = "desc" id="desc-army"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="main-minus">
+            <div class="content">
+                <div class="main-content">
+                    <h1 class="main-text" id="unibari"></h1>
+                    <p class="description-text" id="years-unibari"></p>
+                    <p class = "desc" id="desc-unibari"></p>
                 </div>
             </div>
         </div>
